--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,34 @@
         android:theme="@style/Theme.Hometab"
         tools:targetApi="31">
         <activity
-            android:name=".firstpage"
+            android:name="writeactivity.write2"
+            android:exported="false" />
+        <activity
+            android:name="writeactivity.write1"
+            android:exported="false" />
+        <activity
+            android:name=".itshome"
+            android:exported="false" />
+        <activity
+            android:name="loginactivity.account5"
+            android:exported="false" />
+        <activity
+            android:name="loginactivity.account4"
+            android:exported="false" />
+        <activity
+            android:name="loginactivity.account3"
+            android:exported="false" />
+        <activity
+            android:name="loginactivity.account2"
+            android:exported="false" />
+        <activity
+            android:name="loginactivity.account1"
+            android:exported="false" />
+        <activity
+            android:name="loginactivity.login1"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,9 +49,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".writing"></activity>
-        <activity android:name=".writing2"></activity>
     </application>
 
 </manifest>
